objects/Inactive_User_Devices__c.object
<CustomObject>
    <description>This object is used to store Inactive user devices that has been deleted.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inactive User Devices</relationshipLabel>
        <relationshipName>Inactive_User_Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Of_Registration__c</fullName>
        <description>Device Registration Date</description>
        <label>Date Of Registration</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Id__c</fullName>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Registration_Date__c</fullName>
        <label>Device Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_manufacturer__c</fullName>
        <label>Device manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_version__c</fullName>
        <label>Device version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_address__c</fullName>
        <description>Storing IP address</description>
        <label>IP address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System_Name__c</fullName>
        <label>Operating System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System_Version__c</fullName>
        <label>Operating System Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Device Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Console</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inactive User Devices</label>
    <nameField>
        <displayFormat>IDN-{0000000000}</displayFormat>
        <label>Inactive User Devices  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inactive User Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>